--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
+
+.text, .title {
+  font-size: 17px;
+  color: rgb(77, 17, 17);
+  margin-bottom: 0ch; 
+}
+.title {
+  font-family: serif;
+  font-weight: 700;
+  margin-top: 17px; 
+}
+.text-pointer {
+    cursor: pointer;
+}
+.center-text {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.making-row {
+    display: flex;
+    flex-direction: row;
+}
+.separate-two-side {
+    justify-content: space-between
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.width-option {
+  margin-top: 17px;
+  width: 51px;
 }
