--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-
+.main-frame-tighten {
+  width: 1591px;
+  margin: auto;
+}
 .text, .title {
   font-size: 17px;
   color: rgb(77, 17, 17);
@@ -6,13 +9,16 @@
 }
 .title {
   font-family: serif;
-  font-weight: 700;
+  font-weight: 300;
   margin-top: 17px; 
 }
 .text-pointer {
     cursor: pointer;
 }
-.center-text {
+.text-pointer:hover {
+    color: rgba(77, 17, 17);
+}
+.text-center {
   text-align: center;
 }
 .making-row {
