--- a/src/component/mitglied.css
+++ b/src/component/mitglied.css
@@ -22,7 +22,7 @@ img {
 .logout-text {
     border: solid 1px rgb(212, 132, 132);
     border-radius: 3px;
-    padding: 5px;
+    padding: 3px;
     margin-left: 31px;
     font-size: 11px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -35,7 +35,17 @@ img {
     font-size: 15px;
     font-weight: 500;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: rgb(151, 49, 12);
+    color: rgb(37, 24, 19);
+}
+.follow-tab {
+    cursor: pointer;
+    align-content: center;
+    justify-content: center;
+    padding: 3px;
+    margin-left: 11px;
+    font-size: 11px;
+    font-weight: 500;
+    color: rgb(0, 107, 126);
 }
 .personal-left-gap {
     margin-left: 21px;
