--- a/src/component/mitgliedbearbeiten.css
+++ b/src/component/mitgliedbearbeiten.css
@@ -2,7 +2,7 @@
 .block-mitglied-information-aktualisieren {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    height: 271px;
+    height: 431px;
     width: 711px;
     border-radius: 5px;
     border: 0.5px solid rgb(224, 222, 222);
@@ -16,6 +16,13 @@
     font-weight: 100;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 17px;
+}
+.passwort-area {
+    height: 171px;
+}
+.passwort-text {
+    font-size: 11px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .jedes-linie-aktualisieren {
     margin-left: 31px;
