--- a/src/component/mainPlayer.css
+++ b/src/component/mainPlayer.css
@@ -1,71 +1,142 @@
-.title-jedes-collaboration {
-  margin-top: 17px;
-  font-size: 27px;
-}
-.player-wrapper { 
+@media screen 
+and (min-device-width: 911px) {
+  .title-jedes-collaboration {
+    margin-top: 17px;
+    font-size: 27px;
+  }
+  .player-wrapper { 
+      position: relative;
+      float: inherit;
+      margin: 0 auto;
+      align-content: center;
+      justify-content: center;
+      width: 71%;
+      height: 100%;
+  }
+  .react-player {
+      position: relative;
+      float: inherit;
+      padding: 5px;
+      width: 100%;
+      height: 100%;
+  }
+  .player-itself {
     position: relative;
-    float: inherit;
-    display: block;
-    margin: 0 auto;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  .player-control {
+    margin: 5px;
+    border-radius: 5px;
+    font-size: 17px;
+    width: 171px;
+    height: 31px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
+  }
+  .spieler-zahlen {
+    font-weight: 300;
+    margin-left: 7px;
+    margin-top: 3px;
+  }
+  .spieler-symble {
     align-content: center;
     justify-content: center;
-    width: 71%;
-    height: 100%;
+  }
+  .half-center-margin {
+    margin-left: 32%;
+  }
+  .general-text {
+    font-family: "Avenir", Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #2c3e50;
+  }
+  .jedes-spieler-infor {
+    border-radius: 3px;
+    height: 31px;
+    width: auto;
+    padding-top: 11px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
+  }
+  
+  .input-personal-infor {
+    border-radius: 3px;
+    width: 311px;
+    height: 17px;
+  }
+  .text-left-gap {
+    margin-left: .5rem;
+  }
 }
-.react-player {
+
+@media screen 
+and (max-device-width: 900px) {
+  .title-jedes-collaboration {
+    margin-top: 7px;
+    font-size: 17px;
+  }
+  .player-wrapper { 
+      position: relative;
+      float: inherit;
+      margin: 0 auto;
+      align-content: center;
+      justify-content: center;
+      width: 71%;
+      height: 100%;
+  }
+  .react-player {
+      position: relative;
+      float: inherit;
+      padding: 5px;
+      width: 100%;
+      height: 100%;
+  }
+  .player-itself {
     position: relative;
-    float: inherit;
-    padding: 5px;
-    width: 100%;
-    height: 100%;
-}
-.player-itself {
-  position: relative;
-  border-radius: 5px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
-.player-control {
-  margin: 5px;
-  border-radius: 5px;
-  font-size: 17px;
-  width: 171px;
-  height: 31px;
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
-}
-.spieler-zahlen {
-  font-weight: 300;
-  margin-left: 7px;
-  margin-top: 3px;
-}
-.spieler-symble {
-  align-content: center;
-  justify-content: center;
-}
-.half-center-margin {
-  margin-left: 32%;
-}
-.general-text {
-  font-family: "Avenir", Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: #2c3e50;
-}
-.jedes-spieler-infor {
-  border-radius: 3px;
-  height: 31px;
-  width: auto;
-  padding-top: 11px;
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  .player-control {
+    margin: 5px;
+    border-radius: 5px;
+    font-size: 17px;
+    width: 171px;
+    height: 31px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
+  }
+  .spieler-zahlen {
+    font-weight: 300;
+    margin-left: 7px;
+    margin-top: 3px;
+  }
+  .spieler-symble {
+    align-content: center;
+    justify-content: center;
+  }
+  .half-center-margin {
+    margin-left: 32%;
+  }
+  .general-text {
+    font-family: "Avenir", Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #2c3e50;
+  }
+  .jedes-spieler-infor {
+    border-radius: 3px;
+    height: 31px;
+    width: auto;
+    padding-top: 11px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
+  }
+  
+  .input-personal-infor {
+    border-radius: 3px;
+    width: 311px;
+    height: 17px;
+  }
+  .text-left-gap {
+    margin-left: .5rem;
+  }
 }
 
-
-
-
-.input-personal-infor {
-  border-radius: 3px;
-  width: 311px;
-  height: 17px;
-}
-.text-left-gap {
-  margin-left: .5rem;
-}
