--- a/src/component/mainPlayer.css
+++ b/src/component/mainPlayer.css
@@ -10,6 +10,13 @@ and (min-device-width: 911px) {
     -moz-osx-font-smoothing: grayscale;
     color: #2c3e50;
   }
+  .jedes-spieler-infor {
+    border-radius: 3px;
+    height: 31px;
+    width: auto;
+    padding-top: 11px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
+  }
   .player-wrapper { 
     position: relative;
     float: inherit;
@@ -51,13 +58,6 @@ and (min-device-width: 911px) {
   .half-center-margin {
     margin-left: 32%;
   }
-  .jedes-spieler-infor {
-    border-radius: 3px;
-    height: 31px;
-    width: auto;
-    padding-top: 11px;
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
-  }
   
   .input-personal-infor {
     border-radius: 3px;
@@ -83,14 +83,19 @@ and (max-device-width: 900px) {
     font-size: 11px;
     color: #2c3e50;
   }
+  .jedes-spieler-infor {
+    border-radius: 3px;
+    height: 31px;
+    width: auto;
+    padding: 7px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
+  }
   .player-wrapper { 
     position: relative;
     float: inherit;
     margin: 0 auto;
     align-content: center;
     justify-content: center;
-    width: 71%;
-    height: 100%;
   }
   .react-player {
     position: relative;
@@ -109,12 +114,15 @@ and (max-device-width: 900px) {
   }
   .play-control-center-margin {
     margin: 0 auto;
+    width: 100%;
+    align-content: center;
+    justify-content: center;
   }
   .player-control {
-    margin: 5px;
-    border-radius: 5px;
-    font-size: 17px;
-    width: 171px;
+    margin: 3px;
+    border-radius: 3px;
+    font-size: 11px;
+    width: 91px;
     height: 31px;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
   }
@@ -127,21 +135,6 @@ and (max-device-width: 900px) {
     align-content: center;
     justify-content: center;
   }
-  .jedes-spieler-infor {
-    border-radius: 3px;
-    height: 31px;
-    width: auto;
-    padding: 7px;
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
-  }
   
-  .input-personal-infor {
-    border-radius: 3px;
-    width: 311px;
-    height: 17px;
-  }
-  .text-left-gap {
-    margin-left: .5rem;
-  }
 }
 
