--- a/src/component/frontPage.css
+++ b/src/component/frontPage.css
@@ -4,22 +4,46 @@
     width: 100%;
     margin: 0;
 }
-.block-black {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 311px;
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
-    background-color: black;
+
+@media screen 
+and (min-device-width: 911px) {
+    .block-black {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 311px;
+        border-top-left-radius: 7px;
+        border-top-right-radius: 7px;
+        background-color: black;
+    }
+    .block-light-black-text {
+        color: #484848;
+        font-size: 51px;
+        font-weight: bold;
+        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        letter-spacing: 7px;
+        cursor: pointer
+    }
 }
-.block-light-black-text {
-    color: #484848;
-    font-size: 51px;
-    font-weight: bold;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    letter-spacing: 7px;
-    cursor: pointer
+@media screen 
+and (max-device-width: 900px) {
+    .block-black {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 171px;
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+        background-color: black;
+    }
+    .block-light-black-text {
+        color: #484848;
+        font-size: 17px;
+        font-weight: bold;
+        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        letter-spacing: 1px;
+        cursor: pointer
+    }
 }
 .block-light-black-text span{
     transition: .7s linear
@@ -31,9 +55,19 @@
 .block-light-black-text:hover span:nth-child(1):after{
     content: " +";
 }
-.block-light-black-text:hover span:nth-child(2){
-    font-family: monospace;
-    margin-left: 37px
+@media screen 
+and (min-device-width: 911px) {
+    .block-light-black-text:hover span:nth-child(2){
+        font-family: monospace;
+        margin-left: 37px
+    }
+}
+@media screen 
+and (max-device-width: 900px) {
+    .block-light-black-text:hover span:nth-child(2){
+        font-family: monospace;
+        margin-left: 1px
+    }
 }
 .block-light-black-text:hover span{
     color: rgb(126, 37, 37);
@@ -43,11 +77,23 @@
 }
 
 
-.block-second-layer {
-    background-color: black;
-    height: 311px;
-    border-bottom-left-radius: 7px;
-    border-bottom-right-radius: 7px;
+@media screen 
+and (min-device-width: 911px) {
+    .block-second-layer {
+        background-color: black;
+        height: 311px;
+        border-bottom-left-radius: 7px;
+        border-bottom-right-radius: 7px;
+    }
+}
+@media screen 
+and (max-device-width: 900px) {
+    .block-second-layer {
+        background-color: black;
+        height: 151px;
+        border-bottom-left-radius: 3px;
+        border-bottom-right-radius: 3px;
+    }
 }
 
 .moving-area {
@@ -55,17 +101,35 @@
     animation-duration: 3s;
     animation-name: slidein;
 }
-.moving-card {
-    width: 151px;
-    height: 51px;
-    border: 2px solid brown;
-    border-radius: 5px;
-    padding: 31px 5px 5px 5px;
-    cursor: pointer;
-    font-size: 17px;
-    font-family: monospace;
-    text-align: center;
-    vertical-align: middle;
+@media screen 
+and (min-device-width: 911px) {
+    .moving-card {
+        width: 151px;
+        height: 51px;
+        border: 2px solid brown;
+        border-radius: 5px;
+        padding: 31px 5px 5px 5px;
+        cursor: pointer;
+        font-size: 17px;
+        font-family: monospace;
+        text-align: center;
+        vertical-align: middle;
+    }
+}
+@media screen 
+and (max-device-width: 900px) {
+    .moving-card {
+        width: 71px;
+        height: 31px;
+        border: 2px solid brown;
+        border-radius: 5px;
+        padding: 9px 3px 3px 3px;
+        cursor: pointer;
+        font-size: 7px;
+        font-family: monospace;
+        text-align: center;
+        vertical-align: middle;
+    }
 }
 .moving-card:hover {
     transition: .3s;
@@ -111,31 +175,64 @@
 .gap-between-block-show {
     margin-top: 31px;
 }
-.salesline-text {
-    border: black;
-    height: 71px;
-    width: 100%;
-    padding: 11px;
-    text-align: center;
-    font-size: 17px;
-    font-style: italic;
-    color: ghostwhite;
-    transition: .3s;
+@media screen 
+and (min-device-width: 911px) {
+    .salesline-text {
+        border: black;
+        height: 71px;
+        width: 100%;
+        padding: 11px;
+        text-align: center;
+        font-size: 17px;
+        font-style: italic;
+        color: ghostwhite;
+        transition: .3s;
+    }
+    .more-customized-button {
+        margin: auto;
+        padding: 11px;
+        height: 51px;
+        width: 171px;
+        border: 1px solid rgb(165, 164, 161);
+        border-radius: 3px;
+        cursor: pointer;
+        text-align: center;
+        transition: .5s;
+        animation-duration: 3s;
+        animation-name: more-customized-button;
+    }
+}
+@media screen 
+and (max-device-width: 900px) {
+    .salesline-text {
+        border: black;
+        height: 31px;
+        width: 100%;
+        padding: 7px;
+        text-align: center;
+        font-size: 11px;
+        font-style: italic;
+        color: ghostwhite;
+        transition: .3s;
+    }
+    .more-customized-button {
+        margin: auto;
+        margin-top: 17px;
+        padding: 1px;
+        height: 21px;
+        width: 71px;
+        border: 1px solid rgb(165, 164, 161);
+        border-radius: 3px;
+        cursor: pointer;
+        font-size: 11px;
+        color: blanchedalmond;
+        text-align: center;
+        transition: .5s;
+        animation-duration: 3s;
+        animation-name: more-customized-button;
+    }
 }
 
-.more-customized-button {
-    margin: auto;
-    padding: 11px;
-    height: 21px;
-    width: 171px;
-    border: 1px solid rgb(165, 164, 161);
-    border-radius: 3px;
-    cursor: pointer;
-    text-align: center;
-    transition: .5s;
-    animation-duration: 3s;
-    animation-name: more-customized-button;
-}
 @keyframes more-customized-button {
     0% {
         transform: translateX(200px);
