--- a/src/component/mainPlayer.css
+++ b/src/component/mainPlayer.css
@@ -14,7 +14,7 @@ and (min-device-width: 911px) {
     border-radius: 3px;
     height: 31px;
     width: auto;
-    padding-top: 11px;
+    padding: 3px;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
   }
   .player-wrapper { 
@@ -36,6 +36,8 @@ and (min-device-width: 911px) {
   .player-itself {
     position: relative;
     border-radius: 5px;
+    margin: auto;
+    padding: 5px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   }
   .player-control {
@@ -85,9 +87,10 @@ and (max-device-width: 900px) {
   }
   .jedes-spieler-infor {
     border-radius: 3px;
-    height: 31px;
+    height: 17px;
     width: auto;
-    padding: 7px;
+    font-size: 11px;
+    padding: 1px;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
   }
   .player-wrapper { 
@@ -110,6 +113,8 @@ and (max-device-width: 900px) {
   .player-itself {
     position: relative;
     border-radius: 5px;
+    margin: auto;
+    padding: 5px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   }
   .play-control-center-margin {
