--- a/src/component/mainPlayer.css
+++ b/src/component/mainPlayer.css
@@ -71,6 +71,13 @@ and (min-device-width: 911px) {
   .text-left-gap {
     margin-left: .5rem;
   }
+  .textarea-public-text {
+    margin: 0 auto;
+    width: 71%;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 31px;
+    border-left: 2px solid burlywood;
+  }
 }
 
 @media screen 
@@ -141,15 +148,16 @@ and (max-device-width: 900px) {
     align-content: center;
     justify-content: center;
   }
+  .textarea-public-text {
+    margin: 0 auto;
+    width: 71%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11px;
+    padding-left: 11px;
+    border-left: 2px solid burlywood;
+  }
 }
 
-.textarea-public-text {
-  margin: 0 auto;
-  width: 71%;
-  font-family: Arial, Helvetica, sans-serif;
-  padding-left: 31px;
-  border-left: 2px solid burlywood;
-}
 .modify-title-commend-area {
   margin: 0 auto;
   width: 71%;
