--- a/src/component/mitgliedbearbeiten.css
+++ b/src/component/mitgliedbearbeiten.css
@@ -1,8 +1,22 @@
+.img-jedes-block-define {
+    margin: 7px;
+    cursor: pointer;
+    height: auto;
+}
+.img-area-define {
+    margin-left: 31px;
+    margin-bottom: 17px;
+}
+.img-text {
+    font-size: 11px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 
 .block-mitglied-information-aktualisieren {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    height: 431px;
+    height: 511px;
     width: 711px;
     border-radius: 5px;
     border: 0.5px solid rgb(224, 222, 222);
