--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,9 @@ and (max-device-width: 900px) {
   display: flex;
   flex-direction: column;
 }
+.gap-upper {
+  margin-top: 20px;
+}
 
 button {
   max-width: 100%;
