--- a/src/component/mainPlayer.css
+++ b/src/component/mainPlayer.css
@@ -3,6 +3,33 @@ and (min-device-width: 911px) {
   .title-jedes-collaboration {
     margin-top: 17px;
     font-size: 27px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #2c3e50;
+  }
+  .project-inform-frame {
+    margin: 0 auto;
+    margin-top: 17px;
+    border: 1px solid blanchedalmond;
+    border-radius: 11px;
+    padding: 11px;
+    width: 775px;
+  }
+  .project-inform-frame:hover {
+    transition: 1s;
+    border: 1px solid rgb(54, 44, 29);
+    box-shadow: 0 3px 7px 0 brown;
+  }
+  .project-inform-column {
+    width: 177px;
+  }
+  .project-inform-erste-text {
+    margin-left: 7px;
+    font-family: cursive;
+    height: 31px;
+  }
+  .project-inform-zweite-text {
+    margin-left: 17px;
+    font-family:'Courier New', Courier, monospace
   }
   .general-text {
     font-family: "Avenir", Helvetica, Arial, sans-serif;
@@ -104,6 +131,33 @@ and (max-device-width: 900px) {
   .title-jedes-collaboration {
     margin-top: 7px;
     font-size: 17px;
+  }
+  .project-inform-frame {
+    margin: 0 auto;
+    margin-top: 7px;
+    border: 1px solid blanchedalmond;
+    border-radius: 3px;
+    padding: 3px;
+    width: 100%;
+  }
+  .project-inform-frame:hover {
+    transition: 1s;
+    border: 1px solid rgb(54, 44, 29);
+    box-shadow: 0 1px 3px 0 brown;
+  }
+  .project-inform-column {
+    width: 77px;
+  }
+  .project-inform-erste-text {
+    margin-left: 3px;
+    font-family: cursive;
+    font-size: 11px;
+    height: 17px;
+  }
+  .project-inform-zweite-text {
+    margin-left: 7px;
+    font-size: 11px;
+    font-family:'Courier New', Courier, monospace
   }
   .general-text {
     font-family: "Avenir", Helvetica, Arial, sans-serif;
